# ibex

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile.am  Makefile.bak  README.md  analysis.txt  asdf.cpp  bimap.h  configure.ac  enumeration.h  example.py  grammar.h  lr1.h  m-swlist.h  main.c  main.cpp  parser.cpp  parser.h  print.h  requirements.txt  rnd.py  sample.grammar  scangen.py  setup.py  swlist.c  swlist.h  test  test.cpp  test.py  test_runner.hpp  todo.md  tree.hpp
categories/: Makefile  cats.cpp  cats.h  main  main.cpp  regex2.cpp  regex2.h  utilities.h
categories/test/: icu.cpp  wcin.cpp
codegen/: Makefile  example.py  requirements.txt
codegen/templates/: parser.hpp
dfa/: Makefile  bimap.h  dfa.cpp  dfa.h  hopcroft.cpp  hopcroft.h  main.cpp  test_dfa.cpp  test_dfa.h
dfa/test/: test.cpp  test.h
enumeration2/: enumeration.h
examples/: .gitignore  Makefile  example.c  example.cpp  example.py  exampleparser.hpp  generate.py  generate.sh  parser.cpp  parser.h  parser.hpp  parser_wrapper.hpp  parsetree.hpp  requirements.txt  sample.cpp  sample.h  scanner.c  scanner.hpp
examples/c/: Makefile  template.c
examples/c++/: template.cpp
examples/cpp/: Makefile
examples/data/: empty.csv  equal.csv  greaterthan.csv  lbracket.csv  lessthan.csv  lparen.csv  number.csv  rbrace.csv  rparen.csv  string.csv
examples/poc/: example.py
examples/py/: main.py  scanner.py  template.py  test.py
examples/python/: Makefile  linkedlist.py  main.py  match.py  scanner.py  template.py  test.py
extra/: Makefile  main.c  vector.h
extra/swlist/: main.c  swlist.h
generate/: Makefile  asdf.cpp  category.h  gen2.h  generate.cpp  generate.h  generate_category.h  generator.h  main.cpp  sample.cpp  scanner.cpp  test  test.cpp
generate/asdf/: Makefile  (+3 more)
hopcroft/: hopcroft.cpp  hopcroft.h  main.cpp
ibex/: Cargo.toml
ideas/: syntax.md
include/: alphabet.hpp  automaton.h  automaton.hpp  dfa.h  dis.h  dis.hpp  dis2.h  distree.h  distree.hpp  dit.h  dit.hpp  generator.h  grammar.h  grammar.hpp  item.h  item.hpp  nfa.h  parser.h  parser.hpp  parsetree.h  parsingtable.hpp  rbtree.h  rbtree2.h  regex.h  rnd.h  rule.h  state.hpp  tree.hpp  utilities.h
lib/: .lib
lr1/: collection.h  item.h  parser.h
nfa/: Makefile  _nfa.cpp  main.cpp  nfa.cpp  nfa.h  test_nfa.cpp  test_nfa.h  thompson.h
python/: Makefile  example.py  generate_test_cases.py  gentestdata.py  requirements.txt  rnd.py  scangen.py  setup.py  test.py  tree.i
redblack/: algorithms.py  collections.py  containers.py
regex/: Makefile  delete.cpp  delete.txt  main.cpp  regex.cpp  regex.h  test.cpp  test_regex.cpp  test_regex.h  todo.md  utilities.cpp  utilities.h
regexp/: Makefile  sample.py  scanner.py  tokens.py
rnd/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.bak  README.md  configure.ac
rnd/examples/: example.cpp  generate.py  generate.sh  parser.hpp
rnd/include/: sagl.h
rnd/python/: .gitignore  example.py  requirements.txt  rnd.py  sagl.py
rnd/python/test/data/: string.csv  whitespace.csv
rnd/src/: .gitignore  automaton.hpp  automaton.test.cpp  nexpr.hpp  nexpr.test.cpp  wrapper.cxx  zsymbols.hpp  zsymbols.test.cpp
rnd/src/lib/: .gitignore  Makefile  main.cpp  regexp.cxx  regexp.h
rnd/src/parse/: Makefile  eval.hpp  main.cpp
rnd/src/regexp/: Makefile  eval.hpp  eval2.hpp  parser.hpp  regexp.cxx  scanner.hpp  variable.hpp
rnd/src/regexp/parser/: parser.hpp
rnd/src/rnd/: automaton.cpp  automaton.hpp  automaton.test.cpp  minauto.cpp  minauto.hpp  minauto.test.cpp  nexpr.cpp  nexpr.hpp  nexpr.test.cpp  rnd.cxx  zsymbols.cpp  zsymbols.hpp  zsymbols.test.cpp
rnd/src/rnd/internals/: automaton.cpp  automaton.hpp  minauto.hpp  nexpr.test.cpp  zsymbols.test.cpp
rnd/src/rnd/parser/: parser.hpp
rnd/src/sagl/: sagl.hpp
rnd/tools/: dotify.sh  generate.sh  generate_scanner.py
rnd/tools/dotify/: dotify.hpp
rnd/tools/generate-scanner/: Makefile  example.py
rnd/tools/generate-scanner/templates/: template.cpp
rnd/tools/rnd_parser/: generate.py
rnd/tools/sagl_parser/: generate.py  generate.sh
sagl/: .gitignore  CMakeLists.txt  Makefile.am  configure.ac  test.py
sagl/examples/: generate.sh  generate_scanner_parser.py
sagl/include/: sagl.h  sagl.hpp
sagl/include/sagl/: automaton.hpp  grammar.hpp  items.hpp  jsonify.hpp  tabulate.hpp
sagl/python/: example.py  grammarp.py
sagl/python/examples/: Makefile  example.py  main.cpp
sagl/src/: Makefile  automaton.hpp  json.cpp  main.cpp  match.hpp  parser.hpp  parsetree.hpp  sagl.cxx  sagl.hpp  scanner.hpp
sagl/src/examples/: generate_scanner_parser.py  main.cpp  parser.hpp  parsetree.hpp
sagl/src/grammar-parser/: grammar.cpp  grammar_parser.cpp  parser.hpp  parsetree.hpp  scanner.hpp
sagl/src/sagl/: automaton.hpp  enumeration.hpp  sagl.cxx  tabulate.cpp  tabulate.hpp
sagl/src/sagl/examples/: parsetree.hpp
sagl/src/sagl/grammar-parser/: grammar.cpp  grammar_parser.cpp  grammar_parser.h  parser.hpp  parsetree.hpp
sagl/src/sagl/internals/: jsonify.hpp
sagl/src/temp/: helper.hpp  items.hpp  main.cpp  parser.hpp  parsetree.hpp  tabulate.hpp
sagl/src/temp/ideas/: parser.cpp
sagl/tests/: test.py
sagl/tools/: Makefile  generate_scanner.py  requirements.txt  scanner.hpp
sagl/tools/grammar-parser/: generate.sh  generate_parser_scanner.py  generate_scanner.py
sagl/tools/scanner-generator/: generate_scanner.py
sagl/tools/templates/: template.cpp
sample/: Makefile  asdf.h  parser.cpp  sample.cpp  test  test.cpp  test.h
scangen/: .gitignore  requirements.txt
sgv2/: Makefile
src/: asdf.h  delete.cpp  dfa.cpp  distree.cpp  enumeration2.h  gen2.cpp  gen2.h  generator.cpp  handles.hpp  main.c  main.cpp  nexpr.hpp  nfa.cpp  parsetree.cpp  partition.h  regex.cpp  rnd.cpp  rnd.h  scanners.hpp  utilities.cpp
templates/: scanner.cpp
test/: Makefile  compare.cpp  dis.c  dis2.c  distree.cpp  profile.cpp  test  test.cpp  test_lib.h  test_runner.hpp  utils.hpp
tests/: test.cpp
thompson/: main.cpp  thompson.cpp  thompson.h
tools/: generate.sh  gentestdata.py  lexeme.py  printer.py
(+491 files in other folders)
